fixing set visible links and adjusting file-upload link sizes

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -19,7 +19,7 @@ select {
 		color: #999;
 		background: none;
 	}
-	
+
 	+.active {
 		a,a:hover {
 			background: #aaf;
@@ -131,7 +131,7 @@ select.file-select {
 .panel {
 	border: 1px solid #999;
 	padding: 3px;
-	
+
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -142,7 +142,7 @@ select.file-select {
 	width: 200px;
 	height: 200px;
 	overflow: hidden;
-	
+
 	img {
 		float:right;
 	}
@@ -162,25 +162,25 @@ select.file-select {
 
 .metadata {
 	//height: 16.3em;
-	
+
 	.attributes {
 		//height: 15em;
 		padding-right: 3px;
 		overflow-y: scroll;
 		overflow-x: hidden;
-		
+
 		.hidden {
 			display: none;
 			background-color: #D1E0FF;
 		}
 	}
-	
+
 	.attributes.show-hidden {
 		.hidden {
 			display: block;
 		}
 	}
-	
+
 	.analysis {
 		background-color: #BAE3FF;
 	}
@@ -221,7 +221,7 @@ select.file-select {
 	border: 1px dashed #ccc;
 	min-height: 20px;
 	padding: 2px;
-	
+
 	textarea {
 		width: 100%;
 	}
@@ -246,17 +246,17 @@ select.file-select {
 //Template Editor
 .template-entry {
 	margin: 2px 0px;
-	
+
 	> div {
 		vertical-align: middle;
 		display: inline-block;
 		padding: 0 3px
 	}
-	
+
 	.description-textarea {
 		height: 18px;
 	}
-	
+
 	input[type="checkbox"], .handle, .remove {
 		position: relative;
 		top: 4px;
@@ -312,11 +312,11 @@ select.file-select {
 .pathSegments {
 	margin: 0;
 	padding: 0;
-	
+
 	li {
 		display: inline;
 	}
-	
+
 	li:before {
 		content: '/';
 	}
@@ -351,16 +351,16 @@ select.file-select {
 
 .search-replace-results {
 	width: 95%;
-	
+
 	.header {
 		font-weight: bold;
 	}
-	
+
 	.div-td {
 		padding: 2px 12px;
 		border-left: 1px solid #ccc;
 	}
-	
+
 	.div-td:first-child {
 		border: none;
 	}
@@ -418,7 +418,7 @@ input.image-search-field {
 	-webkit-box-shadow: -2px 2px 5px rgba(50, 50, 50, 0.75);
 	-moz-box-shadow:    -2px 2px 5px rgba(50, 50, 50, 0.75);
 	box-shadow:         -2px 2px 5px rgba(50, 50, 50, 0.75);
-	
+
 	.close-panel {
 		position: absolute;
 		top: 0;
@@ -465,7 +465,7 @@ input.image-search-field {
 		-moz-border-radius: 5px;
 		border-radius: 5px;
 		color: #08c;
-		
+
 		line-height: 30px;
 		font-size: 15px;
 		text-align: center;
@@ -475,7 +475,7 @@ input.image-search-field {
 		height: 30px;
 		opacity: 0;
 	}
-	
+
 	&:hover .upload-cover, &.hover .upload-cover {
 		border-color: #08c;
 		text-decoration: underline;
@@ -487,7 +487,7 @@ input.image-search-field {
 		text-align: left;
 			padding: 2px 7px;
 	}
-	
+
 	.file {
 		margin: 1px;
 		padding: 2px;
@@ -497,7 +497,7 @@ input.image-search-field {
 		&:hover {
 			background-color: #eee;
 		}
-		
+
 	}
 }
 
@@ -545,6 +545,8 @@ input.image-search-field {
 	.file-upload {
 		cursor:pointer;
 		top:0;
+		height: 20px;
+		line-height: 20px;
 		width: 100%;
 		position: absolute;
 		opacity: 0;
